--- a/client/src/components/ChatContainer.css
+++ b/client/src/components/ChatContainer.css
@@ -51,10 +51,50 @@
 
 .chat-messages {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
+  gap: 1rem;
+  overflow-y: scroll;
+  padding: 1rem;
   width: 100%;
   height: 80%;
+  .message {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.2rem;
+    border-radius: 0.4rem;
+    width: 100%;
+    .message-content {
+        max-width: 40%;
+        overflow-wrap: normal;
+        padding: 0.3rem;
+        font-size: 1.1rem;
+        border-radius: 0.4rem;
+        background-color: #494949;
+    }
+    .sent {
+        align-self: flex-end;
+        background-color: #007bff;
+        color: #fff;
+    }
+    .receive {
+        align-self: flex-start;
+        background-color: #6c757d;
+        color: #fff;
+    }
+    /* width: 100%;
+    .message-username {
+      font-size: 1rem;
+      font-weight: 600;
+      color: #fff;
+    }
+    .message-text {
+      font-size: 1rem;
+      color: #fff;
+    } */
+  }
 }
 
 .chat-input {
