--- a/client/src/components/ChatInput.css
+++ b/client/src/components/ChatInput.css
@@ -71,6 +71,8 @@
   justify-content: center;
   cursor: pointer;
   color: #fff;
+  background-color: transparent;
+  border: none;
   font-size: 2rem;
   svg {
     width: 100%;
