--- a/client/src/components/Welcome.css
+++ b/client/src/components/Welcome.css
@@ -1,6 +1,14 @@
 .welcome__container {
     display: flex;
+    height: auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
+
+.welcome__container img {
+    width: 50%;
+    height: 50%;
+}
+
