--- a/client/src/pages/Chat.css
+++ b/client/src/pages/Chat.css
@@ -12,17 +12,18 @@
   box-shadow: 0px 0px 10px 0px #000000;
   border-radius: 0.4rem;
   overflow: auto;
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    grid-template-columns: 30% 70%;
-  }
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    grid-template-columns: 100%;
-  }
-  .container123 {
+
+  .chat-subcontainer {
     width: 100%;
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
+    @media screen and (min-width: 768px) and (max-width: 1024px) {
+      grid-template-columns: 30% 70%;
+    }
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+      grid-template-columns: 100%;
+    }
   }
 }
 
@@ -76,7 +77,7 @@
   background-color: azure;
   gap: 0.2rem 0.5rem;
   border-radius: 0.4rem;
-  box-shadow: 0 0 0.3rem 0.01rem rgba(0, 0, 0, 0.7)
+  box-shadow: 0 0 0.3rem 0.01rem rgba(0, 0, 0, 0.7);
 }
 
 .self_details__avatar {
