--- a/client/src/pages/Chat.css
+++ b/client/src/pages/Chat.css
@@ -2,11 +2,11 @@
   width: 80%;
   height: 80%;
   margin: 0 auto;
-  position: fixed;
-  top: 50%;
-  left: 50%;
+  /* position: absolute;
+  top: 53%;
+  left: 50%; */
   padding: 0.5rem;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   display: flex;
   background-color: #f5f5f5;
   box-shadow: 0px 0px 10px 0px #000000;
