--- a/client/src/pages/SetAvatar.css
+++ b/client/src/pages/SetAvatar.css
@@ -1,9 +1,11 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: absolute;
-  top: 50%;
+  position: relative;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -60%);
   align-items: center;
