--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   background-color: #a8a8a8;
-  padding: 1.5%;
+  padding: 1%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,13 +14,14 @@
   text-decoration: none;
   font-size: 20px;
   display: flex;
+  flex-direction: row;
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
   font-weight: bold;
   img {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
   }
 }
