--- a/client/src/components/Contacts.module.css
+++ b/client/src/components/Contacts.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     padding: 0.5rem;
-    border-bottom: 0.25px;
+    border: none;
     background-color: wheat;
     cursor: pointer;
     border-radius: 0.4rem;
@@ -28,6 +28,7 @@
     width: 100%;
     gap: 0.2rem;
     flex-direction: column;
+    align-items: flex-start;
   }
   .contact__username {
     font-size: 1rem;
