--- a/client/src/components/Contacts.module.css
+++ b/client/src/components/Contacts.module.css
@@ -26,9 +26,9 @@
   .contact__details {
     display: flex;
     width: 100%;
-    gap: 0.2rem;
-    flex-direction: column;
-    align-items: flex-start;
+    gap: 0.5rem;
+    flex-direction: row;
+    align-items: center;
   }
   .contact__username {
     font-size: 1rem;
@@ -37,5 +37,19 @@
   .contact__status {
     font-size: 1rem;
     font-weight: 400;
+  }
+
+  .online-status {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #2ecc71;
+  }
+
+  .offline-status {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #e74c3c;
   }
   
