--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -8,6 +8,12 @@
   align-items: center;
 }
 
+.navbar-options {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
 .navbar-brand a {
   text-decoration: none;
   font-size: 20px;
@@ -35,10 +41,14 @@
 .navbar-menu {
   list-style: none;
   display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .navbar-menu li {
   margin-right: 10px;
+  padding: 5px;
+  border-radius: 0.4rem;
 }
 
 .navbar-menu li a {
@@ -46,10 +56,55 @@
   text-decoration: none;
   color: #333;
   padding: 5px;
+  border-radius: 0.4rem;
+  transition: all 0.3s ease;
 }
 
-.navbar-menu li a:hover,
+.navbar-menu li a:hover {
+  color: #fff;
+  background-color: #333;
+  border-radius: 0.4rem;
+  padding: 0.5rem;
+  transform: scaleY(1.1);
+}
+
 .navbar-menu li a.active,
 .navbar-menu li a:active {
   color: #fff;
+  background-color: #333;
+  border-radius: 0.4rem;
+  padding: 0.5rem;
 }
+
+.profile-link {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  img {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+  }
+  &:hover {
+    transform: none;
+  }
+}
+
+.profile-link a,
+.profile-link a:visited,
+.profile-link a:active,
+.profile-link a:hover {
+  transform: none;
+  color: blue;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* .navbar-menu li a.active {
+  background-color: #333;
+  border-radius: 0.4rem;
+  padding: 0.5rem;
+} */
+
