--- a/client/src/pages/AddContact.module.css
+++ b/client/src/pages/AddContact.module.css
@@ -2,39 +2,51 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 30%;
   margin: auto;
   height: 50%;
-  border: 0.2rem solid grey;
+  border: 0.1rem solid grey;
   border-radius: 0.4rem;
-  box-shadow: 0 0 0.5rem grey;
-  padding: 1rem;
+  box-shadow: 0 0 0.3rem grey;
+  overflow: hidden;
 }
 
 .title-container {
-    height: 30%;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.5rem;
+  padding: 1rem;
+  background-color: #4caf50;
+  color: white;
 }
 
 .input-container {
+  width: 80%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  gap: 3rem;
 }
 
 .input-container input {
   width: 100%;
+  height: 20%;
   padding: 0.5rem;
   margin: 0.5rem;
+  font-size: 1rem;
   border-radius: 0.4rem;
   border: 0.1rem solid grey;
 }
 
 .submit-button {
   padding: 0.5rem;
+  height: 20%;
   border-radius: 0.4rem;
   border: 0.1rem solid grey;
   background-color: #4caf50;
