Update styles in various components

--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -1,10 +1,11 @@
 .navbar {
   position: relative;
   width: 100%;
-  background-color: #a8a8a8;
+  background-color: #f4f4f4;
   padding: 1%;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0 0.1rem 0.3rem grey;
   align-items: center;
 }
 
@@ -54,7 +55,7 @@
 .navbar-menu li a {
   font-weight: bold;
   text-decoration: none;
-  color: #333;
+  color: #4caf50;
   padding: 0.5rem;
   border-radius: 0.4rem;
   transition: all 0.3s ease;
@@ -62,14 +63,14 @@
 
 .navbar-menu li a:hover {
   color: #fff;
-  background-color: #333;
+  background-color: #4caf50;
   border-radius: 0.4rem;
 }
 
 .navbar-menu li a.active,
 .navbar-menu li a:active {
   color: #fff;
-  background-color: #333;
+  background-color: #4caf50;
   border-radius: 0.4rem;
   padding: 0.5rem;
 }
@@ -99,10 +100,4 @@
   text-decoration: none;
   font-weight: bold;
 }
-
-/* .navbar-menu li a.active {
-  background-color: #333;
-  border-radius: 0.4rem;
-  padding: 0.5rem;
-} */
 
