--- a/client/src/components/Contacts.module.css
+++ b/client/src/components/Contacts.module.css
@@ -2,16 +2,18 @@
     display: flex;
     align-items: center;
     padding: 0.5rem;
-    border: none;
+    border: 0.1rem solid #ded7d7;
     background-color: wheat;
     cursor: pointer;
     border-radius: 0.4rem;
     transition: all 0.2s ease-in-out;
     &:hover {
       background-color: #f5f5f5;
+      border: 0.1rem solid #4caf50;
     }
     
     &.selected {
+      border: 0.1rem solid #4caf50;
       background-color: #f5f5f5;
     }
   }
