--- a/client/src/components/DropDownMenu.module.css
+++ b/client/src/components/DropDownMenu.module.css
@@ -35,6 +35,7 @@ ul {
   border-radius: var(--border-radius);
   padding: 1rem 1.5rem;
   width: 200px;
+  z-index: 1000;
 }
 
 .dropdown-menu::before {
@@ -80,7 +81,7 @@ ul {
 .dropdown-menu ul li {
   margin: 0;
   padding: 1rem 0;
-  border-top: 0.1rem solid rgba(0, 0, 0, 0.08);
+  border-top: 0.05rem solid rgba(0, 0, 0, 0.08);
 }
 
 .dropdown-menu ul li:hover span {
