--- a/client/src/pages/SetAvatar.css
+++ b/client/src/pages/SetAvatar.css
@@ -52,14 +52,13 @@
   margin-top: 2rem;
   padding: 1rem 2rem;
   font-size: 1.5rem;
-  background-color: black;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 1rem;
   cursor: pointer;
   transition: 0.5s ease-in-out;
   &:hover {
-    background-color: rgb(208, 205, 205);
-    color: black;
+    background-color: #256a28;
   }
 }
