--- a/client/src/components/Contacts.module.css
+++ b/client/src/components/Contacts.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     padding: 0.5rem;
     border: 0.1rem solid #ded7d7;
-    background-color: wheat;
+    background-color: #6c757d;
     cursor: pointer;
     border-radius: 0.4rem;
     transition: all 0.2s ease-in-out;
