--- a/client/src/pages/Chat.css
+++ b/client/src/pages/Chat.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 0.5rem;
   display: flex;
-  background-color: #f5f5f5;
+  background-color: #4caf50;
   box-shadow: 0px 0px 10px 0px #000000;
   border-radius: 0.4rem;
   overflow: auto;
@@ -25,9 +25,7 @@
 
 .chat-list {
   width: 30%;
-  /* background-color: rgb(255, 166, 166); */
-  padding: 0.2rem;
-  /* border-right: 1px solid #000000; */
+  padding: 0.1rem;
   border-radius: 0.4rem;
   height: 100%;
   overflow: auto;
@@ -47,9 +45,11 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  background-color: #494949;
-  border-radius: 8px;
-  /* padding: 0.5rem; */
+  background-color: #6c757d;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+  overflow: auto;
+  box-shadow: 0 0 0.3rem 0.01rem white;
 }
 
 .all-contacts {
@@ -60,7 +60,8 @@
   gap: 0.3rem;
   border-radius: 0.4rem;
   overflow: auto;
-  box-shadow: 0 0 0.3rem 0.01rem rgba(0, 0, 0, 0.7);
+  background-color: white;
+  box-shadow: 0 0 0.3rem 0.01rem white;
 }
 
 .self_details__container {
@@ -73,7 +74,7 @@
   background-color: azure;
   gap: 0.2rem 0.5rem;
   border-radius: 0.4rem;
-  box-shadow: 0 0 0.3rem 0.01rem rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 0.3rem 0.01rem white;
 }
 
 .self_details__avatar {
