--- a/client/src/components/ChatContainer.module.css
+++ b/client/src/components/ChatContainer.module.css
@@ -8,7 +8,7 @@
   height: 100%;
   width: 100%;
   background-color: whitesmoke;
-  border-radius: 8px;
+  border-radius: 0.4rem;
 }
 
 .chat-header {
@@ -67,6 +67,17 @@
   width: 100%;
   height: 100%;
   padding: 0.2rem;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  font-size: 1.2vw;
+  color: #4caf50;
 }
 
 .message {
