--- a/client/src/components/ChatInput.module.css
+++ b/client/src/components/ChatInput.module.css
@@ -39,3 +39,25 @@
     width: 100%;
   }
 }
+
+.emoji-palette {
+  position: absolute;
+  top: 30%;
+  background-color: #f5f5f5;
+  border-radius: 0.4rem;
+  border: 0.1rem solid #4caf50;
+}
+
+.emoji-palette.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(-20px);
+  transition: all 0.5s ease;
+}
+
+.emoji-palette.inactive {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(0);
+  transition: all 0.5s ease;
+}
