--- a/client/src/components/EmojiPicker.css
+++ b/client/src/components/EmojiPicker.css
@@ -1,5 +1,5 @@
 .chat-emoji {
-  width: 5%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,28 +10,45 @@
   svg {
     width: 100%;
   }
+}
 
-  .EmojiPickerReact {
-    position: absolute;
-    top: 21%;
-    left: 35%;
-    float: left;
+.EmojiPickerReact {
+  position: absolute;
+  background-color: #f5f5f5;
+  box-shadow: 0 5px 15px grey;
+  border-radius: 0.4rem;
+  padding: 0.5rem;
+  z-index: 1000;
+  border: 0.1rem solid #4caf50;
 
-    background-color: #494949;
-    box-shadow: 0 5px 10px grey;
-    .epr-emoji-list {
-      background-color: #494949;
-      .epr-emoji-category {
-        background-color: #494949;
-        .epr-emoji-category-label {
-          background-color: #494949;
-        }
-      }
+  ::-webkit-scrollbar {
+    width: 0.2rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #f5f5f5;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #4caf50;
+    border-radius: 0.4rem;
+  }
+
+  .epr-emoji-category {
+    background-color: #f5f5f5;
+    border-radius: 0.4rem;
+    .epr-emoji-category-label {
+      background-color: #f5f5f5;
+      color: #4caf50;
     }
-    .epr-search-container {
-      input {
-        background-color: #494949;
-      }
+  }
+
+  .epr-search-container {
+    input {
+      background-color: #f5f5f5;
+      border: 0.1rem solid #4caf50;
+      color: #4caf50;
     }
   }
 }
