--- a/client/src/pages/Chat.css
+++ b/client/src/pages/Chat.css
@@ -45,8 +45,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  background-color: #6c757d;
-  padding: 0.5rem;
+  background-color: rgb(243, 158, 128);
   border-radius: 0.4rem;
   overflow: auto;
   box-shadow: 0 0 0.3rem 0.01rem white;
