--- a/client/src/components/ChatContainer.module.css
+++ b/client/src/components/ChatContainer.module.css
@@ -37,6 +37,7 @@
     justify-content: center;
     align-items: flex-start;
     margin-left: 0.5rem;
+    transition: all 0.3s ease-in-out;
     .chat-username {
       font-size: 1.1rem;
       font-weight: 600;
