--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -5,4 +5,5 @@
     width: 100%;
     gap: 1rem;
     overflow: hidden;
+    background-image: url("https://images.unsplash.com/photo-1557683316-973673baf926");
 }
