--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
+  
 }
 
 body,
@@ -19,7 +20,7 @@ body {
   max-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #ded7d7;
+  /* background-image: url("https://images.unsplash.com/photo-1557683316-973673baf926"); */
 }
 
 code {
