--- a/client/src/components/DropDownMenu.module.css
+++ b/client/src/components/DropDownMenu.module.css
@@ -17,6 +17,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: none;
   img {
     height: 3rem;
     width: 3rem;
